# dictionaryparser

./: README.md  dictionary.txt  pyproject.toml
dictionaryparser/: __init__.py  __main__.py
dictionaryparser/dictionary/: __init__.py
dictionaryparser/parser/: __init__.py
