[tool.poetry]
name = "dictionaryparser"
version = "0.1.0"
description = "A parser for the Hayalese Dictionary of Modern Rikatisyï."
authors = ["ezntek <eason@ezntek.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
